website/versioned_docs/version-2.0.x/reference/subsystems/coverage-py.mdx
---
title: coverage-py
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration for Python test coverage measurement.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[coverage-py]`</span>

<span className={styles.options}>

## Basic options

### `filter`

<Option
  cli_repr={`--coverage-py-filter="['<str>', '<str>', ...]"`}
  env_repr="PANTS_COVERAGE_PY_FILTER"
  default_repr={`[]`}
>
  A list of Python modules to use in the coverage report, e.g.
  `['helloworld_test', 'helloworld.util.dirutil']. The modules are recursive:
  any submodules will be included. If you leave this off, the coverage report
  will include every file in the transitive closure of the address/file
  arguments; for example, `test ::` will include every Python file in your
  project, whereas `test project/app_test.py` will include `app_test.py` and any
  of its transitive dependencies.
</Option>

### `report`

<Option
  cli_repr={`--coverage-py-report="[<CoverageReportType>, <CoverageReportType>, ...]"`}
  env_repr="PANTS_COVERAGE_PY_REPORT"
  one_of="console, xml, html, raw, json"
  default_repr={`["console"]`}
>
  Which coverage report type(s) to emit.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--coverage-py-version=<str>`}
  env_repr="PANTS_COVERAGE_PY_VERSION"
  default_repr={`coverage>=5.0.3,<5.1`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--coverage-py-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_COVERAGE_PY_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--coverage-py-entry-point=<str>`}
  env_repr="PANTS_COVERAGE_PY_ENTRY_POINT"
  default_repr={`coverage`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--coverage-py-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_COVERAGE_PY_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.6"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `output_dir`

<Option
  cli_repr={`--coverage-py-output-dir=<str>`}
  env_repr="PANTS_COVERAGE_PY_OUTPUT_DIR"
  default_repr={`dist/coverage/python`}
>
  Path to write the Pytest Coverage report to. Must be relative to build root.
</Option>

### `config`

<Option
  cli_repr={`--coverage-py-config=<file_option>`}
  env_repr="PANTS_COVERAGE_PY_CONFIG"
  default_repr={`None`}
>
  Path to `.coveragerc` or alternative coverage config file
</Option>

## Deprecated options

None

</span>

